[gd_scene load_steps=12 format=3 uid="uid://cw7atud73phhj"]

[ext_resource type="Script" uid="uid://bmkuyn3ts2i0i" path="res://Scripts/spawner.gd" id="1_petny"]
[ext_resource type="PackedScene" uid="uid://b7ixuhsq4f7ee" path="res://Scanes/enemy.tscn" id="2_knhpk"]
[ext_resource type="Script" uid="uid://c6twj7m8pba0g" path="res://Scripts/EnemyType.gd" id="3_qyb47"]
[ext_resource type="Resource" uid="uid://cpgmt5pidyvq3" path="res://Resources/Eye.tres" id="4_btxdy"]
[ext_resource type="Resource" uid="uid://dhgb2ufibinu7" path="res://Resources/EyeGhost.tres" id="5_ubn4w"]
[ext_resource type="Texture2D" uid="uid://dfud5qywvq1js" path="res://Sprites/RPG Battlers 3/3 v1.png" id="6_c4yhp"]
[ext_resource type="Texture2D" uid="uid://cwsil12qjv07p" path="res://Sprites/RPG Battlers 3/4 v1.png" id="7_y2kbs"]
[ext_resource type="Texture2D" uid="uid://c4l027ukl450y" path="res://Sprites/RPG Battlers 3/2 v1.png" id="8_sv8y2"]

[sub_resource type="Resource" id="Resource_ons40"]
script = ExtResource("3_qyb47")
title = "EyeLegs"
texture = ExtResource("6_c4yhp")
health = 0.0
damage = 2.0

[sub_resource type="Resource" id="Resource_v5ud5"]
script = ExtResource("3_qyb47")
title = "Eyelook"
texture = ExtResource("7_y2kbs")
health = 0.0
damage = 4.0

[sub_resource type="Resource" id="Resource_jvflu"]
script = ExtResource("3_qyb47")
title = "Glub"
texture = ExtResource("8_sv8y2")
health = 0.0
damage = 5.0

[node name="Spawner" type="Node2D" groups=["game_spawners"]]
script = ExtResource("1_petny")
enemy = ExtResource("2_knhpk")
enemy_types = Array[ExtResource("3_qyb47")]([ExtResource("4_btxdy"), ExtResource("5_ubn4w"), SubResource("Resource_ons40"), SubResource("Resource_v5ud5"), SubResource("Resource_jvflu")])

[node name="UI" type="CanvasLayer" parent="."]

[node name="VBoxContainer" type="VBoxContainer" parent="UI"]
offset_left = 572.0
offset_top = 8.0
offset_right = 637.0
offset_bottom = 85.0

[node name="Minute" type="Label" parent="UI/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "0"

[node name="Label2" type="Label" parent="UI/VBoxContainer"]
layout_mode = 2
text = ":"

[node name="Second" type="Label" parent="UI/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "00"

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="Pattern" type="Timer" parent="."]
wait_time = 10.0
autostart = true

[node name="Elite" type="Timer" parent="."]
wait_time = 9.0
autostart = true

[node name="SpawnPoints" type="Node2D" parent="."]

[node name="Spawn1" type="Marker2D" parent="SpawnPoints"]

[node name="Spawn2" type="Marker2D" parent="SpawnPoints"]

[node name="Spawn3" type="Marker2D" parent="SpawnPoints"]

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="Pattern" to="." method="_on_pattern_timeout"]
[connection signal="timeout" from="Elite" to="." method="_on_elite_timeout"]
